--- a/_posts/2022-09-28-trade-lab.md
+++ b/_posts/2022-09-28-trade-lab.md
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: base
 description: Visual Display of Benefits of Trading
 categories: [econ20a, demonstration, fall22-23, javascript]
 title: Trade Lab
