small things + 165 and 140

--- a/_posts/2024-09-26-cs-164-lecture.md
+++ b/_posts/2024-09-26-cs-164-lecture.md
@@ -73,6 +73,7 @@ toc: true
     - *Intersection event*: swap order of intersecting segments, check intersections of swapped segments with new adjacencies
     - *Right endpoint*: delete segment from status, check for intersections in newly adjacent segments
 - Works by intersection lemma: all intersecting lines must become adjacent at some point
+- Runs in O((n + k)log n), where k is the size of the output
 
 ## Doubly Connected Edge List (DCEL)
 - Representation of a map
@@ -97,10 +98,12 @@ toc: true
 - Input: Two DCELs; Output: A DCEL that is a combination of both
     - Can use the plane sweep line intersection algorithm to construct this DCEL by finding new intersections (vertices)
     - Can use some algorithms for boolean operations: union, intersection, difference of DCELs
+    - Runs in O((n + k)log n), where n is the total size of the two DCELS and k is the number of intersections
 
 ## Polygon Triangulation (Art Gallery Guarding Problem)
 - Given a simple polygon P with n vertices, place a number of guards/cameras on vertices such that every point in P can be seen by some guard/camera
 - NP-hard to find minimum number of guards (NP-complete for decision problem)
+    - **Simple polygon**: A polygon that does not intersect itself and has no holes
 - Guard using triagnulations
     - **Triangulate**: Get diagonals between all vertices
     - **Triangulation**: Maximal set of non-crossing diagonals
