--- a/_posts/2024-09-26-cs-165-lecture.md
+++ b/_posts/2024-09-26-cs-165-lecture.md
@@ -92,3 +92,44 @@ for k = n - 1 down to 1:
 
 ### FFD and BFD
 - Sort the items from largest to smallest first, then run FF or BF, respectively
+
+## Algorithms and Architectures
+
+- Algorithm descriptions require a computational model to start as a foundation
+
+### Turing Machine
+
+- Mathmatical model
+- Any polynomial-time function has a polynomial-time algorithm on a Turing machine
+- Any computational model or system than can complete any operation a Turing machine can is known as **Turing-complete**
+    - The **ENIAC** (first digital computer) was Turing-complete
+
+### Von Neumann Architecture
+
+- New model that consisted of a control unit, arithmetic/logic unit (ALU), and memory unit to store instructions and execute them
+- Built upon by the **Random Access Machine (RAM)**
+- Programming languages were built for the RAM and Von Neumann machines
+    - Based on high-level programming languages; consisted of artihmetic + logical operators, conditionals, loops, subroutines, memory access
+- **Word RAM Model**: Computational model in which a RAM can do arithmetic and bitwise operations on a word of w bits in constant time
+
+### Memory Hierarchy
+
+- Defined by a trade-off of size vs. speed
+- The closer to the core/CPU, the faster lookup is, but the less you can store
+
+#### External Memory Model
+
+- Identifies he frontier between the two highest layers in the memory hierarchy
+    - B = block size
+    - M = "internal" memory size
+    - N = "external" input size
+- Can use a **B-tree** to maintain a map in external memory
+    - Adapted version of a (a,b) tree
+
+### Parallel Random Access Machine (PRAM)
+
+- Performs operations synchronously over p processors
+    - **Exclusive Read (ER)**: p processors can simultaneously read the content of p *distinct* memory locations
+    - **Concurrent Read (CR)**: p processors can simultaneously read the content of p' memory locations where p' < p
+    - **Exclusive Write (EW)**: p processors can simultaneously write the content of p distinct memory locations
+    - **Concurrent Write (CW)**: p processors can simultaneously write the content of p' memory locations where p' < p
