--- a/_posts/2025-01-06-cs163-lecture.md
+++ b/_posts/2025-01-06-cs163-lecture.md
@@ -166,7 +166,7 @@ for v in topological order:
         relax(u, v)
 ```
 
-### Bellman-Ford Algorithm
+#### Bellman-Ford Algorithm
 - Uses relaxation paradigm and takes O(mn) times
 
 ```
@@ -178,7 +178,7 @@ repeat n-1 times:
 
 - Can be improved based on ordering of nodes or stopping early; still results in same big O
 
-### Dijkstra's Algorithm
+#### Dijkstra's Algorithm
 
 - Topologically sorts the shortest path tree by sorting vertices by distance
     - Uses a priority queue to order on the fly
@@ -193,3 +193,55 @@ while Q is non-empty:
 ```
 
 - Takes O(m log n) with a binary heap or O(m + n log n) with a Fibonacci heap
+
+### Changing Weights without Changing Optimum Paths
+
+- We can add another decoration to the edges, a *height* h(x), to reweight the edges
+- Each edge has two properties: length and height
+    - New length: $l_h(u\rightarrow v) = l(u\rightarrow v) - h(u) + h(v)$
+    - Downhill edges have decreased length, uphill edges have increased length
+- Heights can eliminate negative edges and allow Dijkstra's to work
+    - Can now use Johnson's and Suurballe's algorithm
+    - Won't get rid of negative cycles
+- Can also change the order of computation
+    - A* algorithm uses this fact
+
+#### Johnson's Algorithm
+
+- Input: A graph G with negative edges but not negative cycles
+- Output: Shortest paths between all pairs of vertices
+
+1. Add a start vertex s that is connected to all other vertices by zero-weight edges
+2. Use Bellman-Ford only once to compute the shortest paths from s to all other vertices
+3. Reweight using the absolute value of distance from s as the height (guarantees that all edges are non-negative)
+4. Use Dijkstra from each starting vertex in the reweighted graph
+
+- BF takes O(mn), reweighting takes linear time, Dijkstra is run n times; $O(mn + n^2 \text{log } n)$ time
+
+### Suurballe's Algorithm
+
+- Input: A weighted directed graph and two endpoint vertices, s and t
+- Output: Find two paths from s to t such that the paths don't share edges and minimize the sum of the length of both
+- Can find two shortest paths by finding one shortest path, then adding "reverse" edges with negative weights from the first shortest path
+    - If both shortest paths take the same edge, then the edge will be cancelled out
+
+1. Use Dijkstra to find single-source paths and distances from s
+2. Reweight the edges if they belong to a shortest path to equal 0
+3. Find shortest path P from s to t and reverse its edges
+4. Find a new shortest path in the modified graph
+5. Remove any edges visited in both paths and reconnect the paths
+
+- Two runs of Dijkstra, linear time to reweight and reverse; total runtime of O(m + log n)
+
+### A*
+
+- Want to traverse paths to destination with Dijkstra without going down bad paths
+- Idea: choose a height function for each vertex v that is easily to calculate and accurately estimates the distance from v to t
+    - Must be an underestimate so paths to t eventually go downhill
+    - Can't decrease too quickly; height between two vertices differs by at most the length of the edge between them
+    - AKA needs to be admissible
+- Reweight the graph by height function
+    - Edges will be non-negative because of our height function
+    - Edges with smaller estimates appear shorter
+- Run Dijkstra on this reweighted graph
+    - Same runtime as Dijkstra, but with linear time added to reweight
