update graph algos notes

--- a/_posts/2025-01-06-cs163-lecture.md
+++ b/_posts/2025-01-06-cs163-lecture.md
@@ -28,7 +28,7 @@ Possible solutions:
 1. Dictionary, with vertices as keys
 2. Number vertices and index an array using those numbers
 3. Separate variables for vertex objects for each piece of information
-4. One dictionary varialbe per vertex with keys for each piece of information
+4. One dictionary variable per vertex with keys for each piece of information
 
 - An **adjacency list** uses a dictionary of vertices as keys and the list of outgoing neighbors as values
     - There are lots of different variations on this structure; different objects for vertices and edges
@@ -144,7 +144,7 @@ Possible solutions:
 ### Shortest Path Trees and Relaxation Algorithms
 
 - In graphs without negative cycles, we can generate a tree of shortest paths
-- If s is the startest vertex, then other vertices will have parents are the vertices that come before them their shortest path
+- If s is the starting vertex, then other vertices will have parents that are the vertices that come before them in their shortest path
     - e.g. if the shortest path from x to c is $x \rightarrow b \rightarrow c$, then b is a parent of c in the tree
 - Input: A graph with edge lengths and a starting vertex
 - Output: Tree of shortest paths from s to all other reachable vertices
@@ -155,8 +155,17 @@ Possible solutions:
     - P is the second-to-last vertex on a path of length ≤D
 - Initialize by setting P(x) = None and D(x) = 0 if the vertex is s; otherwise D(x) = infinity
 - For each edge uv, check whether the distance to u + the length of uv is less than the current shortest path for v, then update if so
+    - Known as **relaxing** an edge
+
+```
+def relax(u, v):
+    if D[u] + length(edge uv) < D[v]:
+        D[v] = D[u] + length(edge uv)
+        P[v] = u
+```
+
 - If the graph is a DAG:
-    - Simple algorithm is to go through vertices in topological order and relaxing each vertices edges
+    - Simple algorithm is to go through vertices in topological order and relaxing each vertices' edges
     - Total time is O(m)
 
 ```
@@ -167,7 +176,7 @@ for v in topological order:
 ```
 
 #### Bellman-Ford Algorithm
-- Uses relaxation paradigm and takes O(mn) times
+- Uses relaxation paradigm and takes O(mn) time
 
 ```
 initialize D, P
