--- a/_posts/2025-01-06-econ135-lecture.md
+++ b/_posts/2025-01-06-econ135-lecture.md
@@ -10,6 +10,8 @@ toc: true
 ## Simple Sports Betting
 
 - *Odds*: X:1 odds on an event happening means that, for every one dollar you would lose if the event happens, you gain X dollars if it doesn't happen
+    - In this class, we used **fractional odds**: a-to-b odds, written as a/b
+    - For every b dollars bet, you get a dollars in profit
 - **Hedging**: Managing investments/bets to eliminate risk; guarantee profit
 
 $$
@@ -29,7 +31,10 @@ x > \frac{n}{1 + O_A} \\
 
 $$
 
-- A **fair bet** is win the expected value of winning is 0
+- A **fair bet** is when the expected value of winning is 0
+    - The sum of implied probabilities in a fair bet equals 100%
+    - Bookmakers set the sum of implied probabilities to over 100% in order to ensure a profit
+    - If you are offered a set of bets with a sum of implied probabilities being less than 100%, then you have an arbitrage opportunity
 
 $$
 \text{Odds of A happening if } O_A : 1 \text{ odds are given is } \frac{O_A}{1 + O_A}
