--- a/_posts/2025-01-06-cs163-lecture.md
+++ b/_posts/2025-01-06-cs163-lecture.md
@@ -254,3 +254,59 @@ while Q is non-empty:
     - Edges with smaller estimates appear shorter
 - Run Dijkstra on this reweighted graph
     - Same runtime as Dijkstra, but with linear time added to reweight
+
+## Widest Paths
+
+- Input: A graph with weighted edges
+- Output: Path from start to end with the maximum minimum weight (i.e. the path with the highest throughput, as given by the minimum edge weight on the path)
+
+### Linear Algorithm
+
+- For undirected graphs: if there is a single source and a single destination, the path can be found in **linear time**
+    1. Find median edge weight
+    2. If a path can be made using heavier-than-median edges, get rid of lighter edges and recurse
+    3. If a path cannot be made in this fashion, collapse connected components of wide edges into "supervertices" and recurse; combine edges 
+- Linear time because $\Sigma \frac{m}{2^{i+1}} = O(m)$
+- For directed graphs: we can use an algorithm that divides edges into subsets and runs linear time Dijkstra on these subsets in order to get a runtime of **O(m log<sup>*</sup>n)**
+
+### Dijkstra
+
+- We can modify the relax algorithm to prioritize widths of paths
+
+```
+def relax(u, v):
+    if v in Q and min(D[u], length(uv)) > D[v]:
+        D[v] = min(D[u], length(uv))
+        P[v] = u
+```
+
+- Same runtime as regular Dijkstra's: **O(m + n log n)**
+    - If edges are already sorted, then this algorithm runs in **linear time** using an integer priority queue
+
+#### All-Pairs Directed Widest Paths
+
+1. Sort all the edges before finding paths (O(m log m))
+2. Run linear Dijkstra on each vertex (O(mn))
+3. Total runtime: **O(mn + m log m)**
+
+- Can also use fast matrix multiplication if the number of edges is large in $O(n^{2.688})$ time
+
+### Applications: Voting Systems
+
+- Instant runoff voting: Eliminate the candidate with the fewest amount of voters who have them as their favorite until a candidate has a majority
+- Borda count: With c candidates, give candidates points based on their positioning in a voter's preference ordering (first = c-1, second = c-2, last = 0); candidate with the most points wins
+- Desirable properties
+    - Majority: Candidate with a majority of first-place votes wins
+    - Weak majority: Candidate with all first-place votes wins
+    - Symmetry: All voters are treated equally
+    - Weak Symmetry: There is no super-voter whose preference decides the election
+    - No spoilers: If candidate X does not win the election, then removing X does not change the outcome (think third-parties)
+- Impossible to satisfy weak symmetry, weak majority, and no spoilers
+
+#### Condorcet Property / Schulze Method
+
+- **Condorcet Property**: If there is a candidate X who wins every head-to-head comparison, then X should win the election
+    - If a cycle exists, then there is no apparent winner (i.e. A beats B, B beats C, C beats A)
+- Generate a graph where an edge from candidate U to V is weighted with the number of voters who prefer U to V
+- Relabel each edge X to Y with the width of the widest path from X to Y in the original graph
+- There is guaranteed to be a winner in this graph
