--- a/_posts/2025-01-06-econ135-lecture.md
+++ b/_posts/2025-01-06-econ135-lecture.md
@@ -127,3 +127,24 @@ $$
         - The call option will be exercised and you must sell the stock you own at price E
         - Use the money you got from the sale to payoff the bank loan
         - The put option is worthless and wont't be used
+
+## Cheat Sheet
+
+Finding range of profitable values:
+
+![Image](https://github.com/user-attachments/assets/db274de1-e9b5-46a7-9e44-6b9a39616b0b)
+
+Taylor series formula:
+
+$$
+\text{One variable: } \sum^\infty_{n=0} \frac{f^{(n)} (a)}{n!} (x-a)^n \\
+\text{Two variables: } \sum^\infty_{j=0} \sum^\infty_{k=0} \frac{1}{j!k!} (\frac{\partial ^{j+k} f(a_1, a_2)}{\partial x^j \partial y^k}) (x - a_1)^j(y - a_2)^k
+$$
+
+Calculating PDF from known distribution:
+
+$$
+\text{Suppose } Y = f(X) \text{ and the PDF/CDF of X is known. The PDF of Y can be derived as follows:} \\
+F_y(y) = \int_{g(y)}^{h(y)} f_x(x)dx \\
+f_y(y) = \frac{d}{dy}\int_{g(y)}^{h(y)} f_x(x)dx = f_x(h(y))h'(y) - f_x(g(y))g'(y) 
+$$
