--- a/_posts/2025-01-06-cs163-lecture.md
+++ b/_posts/2025-01-06-cs163-lecture.md
@@ -310,3 +310,114 @@ def relax(u, v):
 - Generate a graph where an edge from candidate U to V is weighted with the number of voters who prefer U to V
 - Relabel each edge X to Y with the width of the widest path from X to Y in the original graph
 - There is guaranteed to be a winner in this graph
+
+## Euler Tours
+
+- Defined as a walk through a graph such that each edge is visited once
+- Note that, for any finite graph, there should be an even number of odd-degree vertices, as the sum of degrees should be even
+    - A graph with no odd vertices has an Euler tour that starts and ends at the same vertex
+    - A graph with two odd vertices has an Euler tour that starts at one of the odd vertices and ends at the other
+
+### Fleury's Algortihm
+
+- Greedy algorithm: Keep adding edges without adding an edge that connects two uncovered parts of the graph
+- Basic implementation is $O(m^2)$; check all edges when adding each edge
+- Advanced implementations have better times, but still not linear
+
+### Hierholzer's Algorithm
+
+- Keep adding edges without checking whether or not we add an edge that connects to two uncovered parts of the graph
+- After getting stuck, return to a vertex with uncovered edges and start a new tour
+    - Splice the original tour with the new tour to create an Euler tour
+- Linear time complexity; each edge is visited once in either the original or a offshoot tour
+
+## Traveling Salesman Problem
+
+- Input: A connected undirected graph with nonzero positive edge lengths
+- Goal: Find a walk that visits each vertex at least once and returns to the start index, minimizing the sum of edge lengths
+- Can also be written as a distance problem
+    - Input: A symmetric positive matrix of distances between points that satisfies the triangle inequality
+    - Goal: Find a cylcic order of points that uses each point exactly once, minimizing the sum of distances between points
+    - These two representations can be converted to each other
+- TSP is NP-hard, and even with unit edge lengths, it is NP-complete
+    - Approximation ratio of 2 can be found with MSTs; theoretical best AR is $\frac{123}{122}$, but the best AR found is $\frac{3}{2} - \frac{1}{10^{36}}$
+    - These approximations run in polynomial time
+
+### 2-Approximation
+
+- Use the graph version so repeated vertices are allowed
+- Find a MST and make a copy of each edge such that all degrees are now even
+- Take an Euler tour of this graph and return it as the approximate TSP tour
+
+### 3/2-Approximation
+
+- Construct an MST
+- Identify the odd vertices in the MST
+    - The number of odd vertices will be even by the handshaking lemma
+- Connect them in pairs using the shortest paths from the original graph, choosing the pairings that have the minimal sum of path lengths
+- Combine the pair paths and the MST edges into one graph; return the Euler tour as the TSP tour
+
+### Exact DP Algorithm
+
+- Basic algorithm takes O(n!) time (try all permutations)
+- Dynamic programming algorithm takes $O(2^nn^2)$ time
+    - Preprocess the graph to get the all pairs shortest paths distance matrix
+    - Choose some starting vertex s
+    - Compute, for every subset of A of remaining vertices, and every vertex in A, the best path from s to v covering all vertices in A
+    - Choose v such that the path through all vertices to v + one more path back from v towards s has the minimum total length
+
+Algorithm to compute the third step:
+
+```
+L[A, v] is a table containing the length of the shortest tour starting at s, ending at v, covering all vertices in A
+V(G) is the set of all vertices
+
+for subset A in 1, 2, ..., 2^(n-1) - 1:
+    for v in A:
+        if A - v is empty:
+            L[A, v] = D[n - 1, v]
+        else:
+            L[A, v] = min{L[A - v, u] + D[u, v] for u in A - v}
+
+return min{L[V(G) - s, v] + D[v, n - 1] for v in V(G) - s}
+```
+
+## Cliques and Coloring
+
+### Centrality
+
+- **Centrality**: A measure of how central (AKA how well-connected) a node is
+    - There exist various measures of centrality, such as degree and pagerank
+- *Closeness centrality*: $\frac{1}{\text{average distance to other vertices}}$
+    - Closeness centrality can be calculated by computing the all-pairs shortest paths and averaging the distances; O(mn)
+    - Approximate algorithm exists where k vertices are chosen and we calculate the distances to these k vertices in O(km)
+        - Graphs with the small world property (all distances ≤ D) leads to lower variance; setting k to $D \log n / \varepsilon^2$ gives a $(1+\varepsilon)$-approximation in time $O(\frac{m}{\varepsilon^2} \log n)$
+- *Betweenness centrality* attempts to find a vertex that is on many shortest paths
+    - Formula: $\sum_{u, w\neq v} \frac{\text{No. of shortest paths from u to w through v}}{\text{No. of shortest paths from u to w}}$
+    - Optimal algorithm takes O(mn) time
+
+### Cores
+
+- A **k-core** of a graph is the largest subgraph in which all vertices have a degree ≥ k
+    - Can be found by deleting vertices of degree < k until there are none left
+
+Algorithm for computing all cores simultaneously:
+
+```
+def cores(G):
+    core = dict()
+    current_core = 0
+    while G is non-empty:
+        v = a minimum-degree vertex
+        current_core = max(current_core, degree(v))
+        core[v] = current_core
+        delete V from G
+    return core
+```
+
+- Can be made efficient by decorating each vertex with the number of uncovered neighbors (intially its degree) and updating + maintaining a dictionary with degrees as keys and lists of unprocessed nodes as values
+- Takes O(sum of all degrees) = O(m) time
+
+### Degeneracy
+
+- Many definitions; one is the largest k for which a nonempty k-core exists
