--- a/_posts/2025-01-06-econ135-lecture.md
+++ b/_posts/2025-01-06-econ135-lecture.md
@@ -127,3 +127,50 @@ $$
         - The call option will be exercised and you must sell the stock you own at price E
         - Use the money you got from the sale to payoff the bank loan
         - The put option is worthless and wont't be used
+
+## Cheat Sheet
+
+Finding range of profitable values:
+
+![Image](https://github.com/user-attachments/assets/db274de1-e9b5-46a7-9e44-6b9a39616b0b)
+
+Taylor series formula:
+
+$$
+\text{One variable: } \sum^\infty_{n=0} \frac{f^{(n)} (a)}{n!} (x-a)^n \\
+\text{Two variables: } \sum^\infty_{j=0} \sum^\infty_{k=0} \frac{1}{j!k!} (\frac{\partial ^{j+k} f(a_1, a_2)}{\partial x^j \partial y^k}) (x - a_1)^j(y - a_2)^k
+$$
+
+Calculating PDF from known distribution:
+
+$$
+\text{Suppose } Y = f(X) \text{ and the PDF/CDF of X is known. The PDF of Y can be derived as follows:} \\
+F_y(y) = \int_{g(y)}^{h(y)} f_x(x)dx \\
+f_y(y) = \frac{d}{dy}\int_{g(y)}^{h(y)} f_x(x)dx = f_x(h(y))h'(y) - f_x(g(y))g'(y) 
+$$
+
+## Black-Scholes
+
+- Aims to price a European option before expiration
+    - Two aspects: intrinsic value (what is it worth if it expired right now) and time value (speculative aspect)
+
+### Modeling Stock Prices
+
+- Price includes a predictable component and a random (stochastic) component
+- **Random walk model**: $\frac{dS}{S} = \mu dt + \sigma dw \rightarrow dS = \mu Sdt + \sigma Sdw$
+    - Predictable component: $\mu dt$, where $\mu$ is the average annual growth rate
+    - Random component: $\sigma dw$ where $\sigma$ is a measure of the standard deviation of annual returns and dw is a random number generated from N(0, dt)
+- **Ito's Lemma**:
+- With Ito's Lemma, we can understand more about dS
+
+$$
+(dS)^2 = (\mu Sdt + \sigma Sdw)^2 \\
+= \mu^2S^2(dt^2) + 2\mu\sigma S^2(dt)(dw) + \sigma^2 S^2(dw)^2\\
+= 2\mu\sigma S^2(dt)(dw) + \sigma^2 S^2(dw)^2
+$$
+
+Now plug this in to find dV (change in option price)
+
+$$
+dV = \sigma S\frac{\partial V}{\partial S} dw + (\mu)
+$$
