update for week 8

--- a/_posts/2025-01-06-cs163-lecture.md
+++ b/_posts/2025-01-06-cs163-lecture.md
@@ -421,3 +421,160 @@ def cores(G):
 ### Degeneracy
 
 - Many definitions; one is the largest k for which a nonempty k-core exists
+
+### Clique
+
+- A **clique** is a subset of a graph for which all pairs are connected by an edge
+    - Maximum clique is the biggest clique in the graph; a maximal clique is a clique to which no more vertices can be added while maintaining the clique property
+    - Independent set problem and clique problem are equivalent; add edges between vertices that are unconnected, and remove existing edges
+        - NP-hard to find the maximum clique
+- There exist various algorithms to find all maximal cliques
+- The **Moon-Moser Theorem** states that the maximum number of maximal cliques is $\leq 3^{n/3}$
+
+#### Bron-Kerbosch Algorithm
+
+- Uses recursive backtracking with three sets
+    - R is the set of vertices containing the current clique being built
+    - P is the set of potential new vertices (that are adjacent to ones in R)
+    - X is the set of vertices that have already been added to a clique and should not be explored
+- Optimizations can be made
+    - Choose a pivot $p \in P \cup X$ with the smallest number of non-neighbors in P and only loop over these neighbors
+        - p's neighbors will also be in a found clique, so the only vertices that can be added to R are its non-neighbors
+    - Use the reverse degeneracy ordering so we don't have to loop over so many vertices
+- Overall run time is $O(dn3^{d/3})$
+
+## Graph Coloring
+
+- Input: A graph
+- Output: A coloring of vertices in the graph such that no neighboring vertices have the same color
+- **Four color theorem**: If a planar graph can be drawn without crossing edges, then it can be colored with at most four colors
+- Two color graphs are **bipartite** and are easy to test for, but testing for a 3-coloring is NP-complete
+
+### Greedy Algorithm
+1. Order the vertices 
+2. Number the available colors (1, 2, 3, ...)
+3. For each vertex in the ordering, give it the lowest-numbered color that is not used by one (or more) of its neighbor
+- O(degree) per node, O(m) total runtime
+- If vertices are ordered in degeneracy ordering, then the greedy algorithm will use at most d + 1 colors
+
+```
+def first_unused(v):
+    used = { color(w) for w in neighbors of v }
+    for c in 1, 2, ... 
+        if c not in used: return c
+```
+
+- This algorithm is optimal for interval graphs (using a left-to-right ordering)
+
+### Register Allocation and Strahler Numbers
+
+- Problem: Calculate an expression using the minimum number of registers at any given time
+- If two expressions A and B require a and b registers respectively, then we will need to store the answer to one of them while doing the other
+    - If A is calculated first, then max(a, b+1) registers are use; otherwise, max(b, a+1) registers are used
+    - Calculate intensive expressions first to save the +1 constant
+- Bottom-up calculation of optimal ordering
+    - If a node x is a leaf, then the number of calculations R(x) is 1
+    - If x has two children y and z, then evaulate the one with the larger subtree first, so R(x) = max(R(y), R(z))
+    - If R(y) = R(z), then R(x) = R(y) + 1 = R(z) + 1
+- This bottom-up calculation also produces the **Strahler numbers** of nodes in a tree
+- This problem can be written as a graph coloring problem
+    - Vertices are the local variables of the intermediate code
+    - Edges are local variables that need to be stored at the same time
+    - Colors are available registers
+
+## Chordal Graphs
+
+- A graph is a **chordal graph** if and only if one of the following conditions are satisfied:
+    1. Every cycle longer than three vertices has a **chord**, or another edge connecting two vertices of the cycle
+    2. It has an **elimination ordering**: An ordering of the vertices where the later neighbors of every vertex form a clique
+    3. For every two vertices x and y and every minimal subset S whose deletion would separate x from y, S is a clique
+- Definition 1 is analagous to a graph with no holes, where a **hole** is a cycle of at least length 4 that does not have a chord
+
+### Elimination Ordering Algorithm (Lexicographic BFS)
+
+- If G has an elimination ordering, so does G - v
+- Slow, basic algorithm: find vertices whose neighbors form a clique and delete it
+- We can check validity of an elimination order in linear time; for each vertex v, check that all later neighbors of v are neighbors of w (the neighbor of v that is next in the ordering)
+    - This can be done using BFS
+    - **Lexicographic ordering**: Given an ordering of vertices, define $pred_i(v)$ to be the ith neighbor of v or v itself if there are fewer than i neighbors earlier than v; order these vertices based on the tuple $\{pred_1(v), pred_2(v), ..., pred_n(v)\}
+- Algorithm for finding lexicographic order
+    - Maintain a sequence of sets of unprocessed vertices, initially in one big set
+    - While this sequence is nonempty:
+        1. Let $S_i$ be the first set in the sequence and v by any vertex in this set
+        2. Remove v from $S_i$ (and remove $S_i$ if it becomes empty)
+        3. Output v; let N(v) be the set of neighbors of v
+        4. For each set $S_j$ in the sequence, split $S_j$ into two sets $S_j \cap N(v)$ and $S_j \ N(v)$
+- We can use dynamic sets, linked lists, and dictionaries to get $O(\vert N(v)\vert)$ time
+
+## Perfect Graphs
+- A graph is **perfect** if the optimal number of colors equals the number of vertices in the largest clique
+    - Deleting any vertex in this graph will produce another perfect graph
+        - This property is true for interval, chordal, and bipartite graphs
+- **Strong Perfect Graph Theorem**: A graph G is perfect if and only if it has no odd-length holes AND its complement has no odd-length holes
+    - Implies the "weak perfect graph theorem" that complement of perfect graphs are perfect
+- Perfect graphs can be found in polynomial time ($O(n^9)$)
+- An optimal method for coloring and finding cliques in perfect graphs takes polynomial time but is complex
+- Interval graphs $\in$ chordal graphs $\in$ perfect graphs
+
+## Interval Graphs and Path Decomposition
+
+- An **interval graph** is defined as a graph with nodes representing intervals and edges representing overlaps of two intervals
+- We can rewrite an interval graph using **bags** where each interval segment is labeled by the intervals that overlap during it
+    - Get rid of bags that are not subsets of larger bags
+    - The intervals can be recovered from the path decomposition
+    - This is known as the **interval graph path decomposition**
+
+<img width="655" alt="Image" src="https://github.com/user-attachments/assets/98392fd9-4d9a-4647-b097-a7968ab33f63" />
+
+- Properties of the interval graph path decomposition
+    - Each vertex belongs to a consecutive sequence of bags
+    - Edges are pairs of vertices that both appear in the same bag
+    - The largest clique is the biggest bag
+    - Each edge has both its endpoints in some bag
+- **Path decomposition**: get rid of the intervals and use a sequence of bags with the following properties
+    - Each vertex appears in a consecutive subsequence of bags
+    - Every edge has ≥ 1 bag containing both endpoints
+- One graph can have many different path decompositions
+    - The *width* of a decomposition is the size of the biggest bag minus 1
+    - The pathwidth of a graph is the smallest width of any decomposition
+    - The pathwidth of a graph can also be defined as the smallest possible max clique size (minus one) of an interval graph containing G
+- Vertices of a clique have overlapping subsequences of bags
+    - Some bag contains the whole clique
+
+### Algorithms
+Fast clique finding with a low-width path decomposition:
+
+```
+for each bag in the path decomposition:
+    for each subset of the bag:
+        if it's a clique bigger than the best found so far
+            remember it as max clique
+```
+
+- Outer loop is O(n), inner loop is $O(2^w)$, so $O(n2^w)$ time
+
+Fast coloring:
+- We can use a dynamic programming algorithm to color a graph fast
+
+```
+for each bag B in left-to-right order, and each coloring C with ≤ k colors:
+    let B' be the bag just before B
+    Good(B, C) = true if C is compatible with a good coloring of B'
+```
+
+- G has a k-coloring if and only if its last bad has a good coloring
+- Time takes $O(nk^{w+1})$
+
+### Trees and Pathwidths
+
+- Trees are easy to find cliques and easy to color but can have large pathwidth - must be a way to decompose them
+- **Tree decomposition** involves making a tree of bags instead of a sequence of bags
+    - Every vertex must belong to a connected subtree of bags
+    - Every edge must have both endpoints in at least one bag
+- **Treewidth**: the smallest width of any tree decomposition, or the smallest possible max clique size (minus one) of a chordal graph that contains G
+    - The tree decomposition can be used in the algorithms that use path decompositions but will work better because more graphs have smaller treewidth
+
+## FPT
+
+- **Fixed parameter tractable**: Time is polynomial n with a fixed exponent, but may depend badly on width
+- **Courcelle's theorem**: There exists an FPT algorithm for any existence or min-weight/max-weight optimization problem on classes of graphs that can be described as a logical formula involving vertices, edges, sets of vertices and edges, and adjacency
