--- a/_posts/2025-01-06-econ135-lecture.md
+++ b/_posts/2025-01-06-econ135-lecture.md
@@ -180,7 +180,7 @@ Uses the fact that $(\Delta t)^2 = 0$ to eliminate terms in the second order Tay
 
 $$
 \Delta S = \mu S \Delta t + \sigma S \Delta X\\
-\Delta f(S,t) \approx \sigma S \frac{\partial f}{\partial S} \Delta X + \left[\mu S \frac{\partial f}{\partial S} + \frac{1}{2}\sigma^2S^2 \frac{\partial^2 f}{\partial S^2} + \frac{\partial f}{\partial t}\right]
+\Delta f(S,t) \approx \sigma S \frac{\partial f}{\partial S} \Delta X + \left[\mu S \frac{\partial f}{\partial S} + \frac{1}{2}\sigma^2S^2 \frac{\partial^2 f}{\partial S^2} + \frac{\partial f}{\partial t}\right]\Delta t
 $$
 
 Example: $f(S,t) = \ln S$
