--- a/_posts/2025-01-06-cs163-lecture.md
+++ b/_posts/2025-01-06-cs163-lecture.md
@@ -583,3 +583,36 @@ for each bag B in left-to-right order, and each coloring C with ≤ k colors:
 
 - **Fixed parameter tractable**: Time is polynomial n with a fixed exponent, but may depend badly on width
 - **Courcelle's theorem**: There exists an FPT algorithm for any existence or min-weight/max-weight optimization problem on classes of graphs that can be described as a logical formula involving vertices, edges, sets of vertices and edges, and adjacency
+
+## Flow
+
+- Flow can be used in many applications; playoff elimination, traffic engineering, etc.
+- **Maximum flow** is the question of determining the maximum flow out of a starting vertex s into an ending vertex t
+    - The flow into and out of a vertex should be equal (aside from the start and end vertices)
+- Properties of maximum flow
+    - Can be converted to a linear program and solved; *polynomial time*
+    - A maximum flow will always exist, even with irrational numbers
+    - **Integrality**: If all the capacities are integers, then there exists a maximum flow in which all flow amounts are integers
+- The max flow problem is equivalent to the **minimum cut** problem
+    - Min-cut: find the minimum sum of capacities flowing from one subset of the graph to another, where subsets are found by "cutting" the graph in the plane
+    - For every flow network, the maximum flow is equal to the minimum cut
+    - For every flow, either there is an equal cut or we can increase the flow; **max flow ≥ min cut**
+
+<img width="366" alt="Image" src="https://github.com/user-attachments/assets/18fb9e62-9fb8-4be2-81c2-f3b726c29280" />
+
+### Greedy Algorithm
+
+- Start with a flow that is not maximum (all-zero flow)
+- If we ever get stuck, we can find a cut with a capacity equal to the flow amount
+- Since max flow ≤ min cut ≤ this new cut, and our flow equals our cut, then we have found the maximum flow
+
+#### Augmenting Path
+- **Residual graph**: A graph with backwards edges containing the capacities of the edge in the current graph minus the flow of the incoming vertex
+- While the residual graph has a path $P$ from $s$ to $t$:
+    - Find the width $w$ of $P$
+    - Increase flow along $P$ by $w$ units
+    - Recompute the residual graph
+- When the algorithm terminates, it finds a minimum cut (and a maximum flow)
+    - Stops when there are no residual paths from s to t
+    - Form a cut of the graph into two subsets $S$ and $T$
+        - $S$ consists of everything that can be reached from $s$ by a residual path; $T$ is everything else
