--- a/_posts/2025-01-06-cs163-lecture.md
+++ b/_posts/2025-01-06-cs163-lecture.md
@@ -616,3 +616,42 @@ for each bag B in left-to-right order, and each coloring C with ≤ k colors:
     - Stops when there are no residual paths from s to t
     - Form a cut of the graph into two subsets $S$ and $T$
         - $S$ consists of everything that can be reached from $s$ by a residual path; $T$ is everything else
+
+### Matching
+
+- **Bipartite graph**: A graph where each edge has a red and blue vertex for its endpoints
+    - Can test for bipartiteness in linear time
+- **Matching**: A set of edges that don't touch each other (no two matched edges share a vertex)
+- **Independent set**: A set of vertices that don't touch each other (no two vertices share an edge)
+- *Konig's theorem*: Let $M$ be the number of edges in a maximum matching and $I$ be the number of vertices in the maximum independent set; in bipartite graphs, $M+I=n$
+- A bipartite maximum matching can be written as a flow problem
+    - Add vertices s connected to all red vertices and t connected to all blue vertices
+    - Direct edges $s \rightarrow red \rightarrow blue \rightarrow t$ with capacity 1
+    - Find the integer maximum flow
+    - If the found flow is not maximum, then the augmented path will be the maximum flow; guaranteed to find the maximum matching
+    - Time bounds: $O(mn)$ for basic algorithm, $O(m\sqrt{n})$ for Hopcroft-Karp-Karzanov, $O(m^{1+\varepsilon})$ for any $\varepsilon > 0$ (Chen)
+
+#### Complete Bipartite Matching
+- **Complete bipartite graph**: All edges that go from one independent set to another are included
+    - $K_{a,b}$ refers to a complete bipartite graph with $a$ vertices on one side, $b$ on the other
+    - *Balanced* means that the graph has the same number on each side: $K_{n/2,n/2}$
+- **Perfect matching**: A matching that matches every vertex
+    - In a balanced complete bipartite graph, every matching can be turned into a perfect matching
+    - Matchings can be described a permutations
+- *Assignment problem*: Find a minimum-weight maximum matching in a weighted bipartite graph
+    - In many applications, the graph is complete bipartite and maximum matchings are perfect matchings
+    - Can turn the question into: Find a minimum-weight *perfect* matching in a weighted bipartite graph
+- **Hungarian algorithm**: Solves assignment problem
+    - Simple steps: Start from an empty matching, then find a minimum-weight alternating path $n/2$ times
+    - The *weight* of an alternating path is how much it increases the weight of a matching
+    - Complex steps: Adjust the weight (original weight - heights of both endpoints) of each edge such that they're all non-negative, use Dijkstra's to find the shortest alternating paths
+    - Runtime: $O(nm + n^2)$ (run Dijkstra's n/2 times)
+
+Full algorithm:
+- Initialize heights to make adjusted weights ≥ 0
+
+- Repeat n/2 times:
+    - Add an artificial start vertex s, with edges of weight 0 to all unmatched red vertices, direct all unmatched edges red-to-blue and all matched edges blue-to-red
+    - Use Dijkstra's to find the adjusted distances from s to all other vertices, including the shortest alternating path
+    - Adjust heights: subtract distance at red vertices, add distance at blue
+    - Use the shortest alternating path to increase the size of matching
