--- a/_posts/2025-01-06-cs163-lecture.md
+++ b/_posts/2025-01-06-cs163-lecture.md
@@ -655,3 +655,52 @@ Full algorithm:
     - Use Dijkstra's to find the adjusted distances from s to all other vertices, including the shortest alternating path
     - Adjust heights: subtract distance at red vertices, add distance at blue
     - Use the shortest alternating path to increase the size of matching
+
+#### Stable Matching
+- Input: A balanced complete bipartite graph with edges representing a preference ordering; i.e. each vertex has a preference ordering of vertices on the other side of the bipartition
+    - In other words: $n$ applicants and $n$ positions, where applicants and positions provide a preference ordering of each other
+- Output: A **stable** matching where no pair of vertices would both prefer to be matched to each other 
+    - In other words: there exists no $(x, y)$ such that $x$ would prefer $y$ and $y$ would prefer $x$ as opposed to the current matching
+- Stable matching always exists and can be found in linear time
+- Various applications; match med students to residencies, high school students to universities, etc.
+
+```
+# Gale-Shapley algorithm
+
+Start with an empty matching
+
+While there are unfilled positions:
+    Choose any set U of unfilled positions
+    Each position in U sends an offer to its most preferred applicant (that it hasn't previously sent anything to)
+    Each applicant who receives an offer from a more preferred company accepts it
+```
+
+- We can get the Gale-Shapley algorithm to run in linear time using decorators, dictionaries, and iterators
+    - Each offer takes constant time because of our data structures, at most $O(m)$ offers; linear time
+- This algorithm will always produce the same stable matching
+    - The stable matching produced will be the best for positions but the worst for applicants (in terms of possible matchings and preference orderings)
+    - Positions cannot game the system by giving false preference orderings
+- Changing the constraints of the stable matching (such as with non-bipartite graphs) turns the problem into NP-hard
+
+## Planar Graphs
+
+- A **planar graph** is a graph that you can draw in the 2D plane such that there are no crossings
+    - A famous example is the [three utilities problem](https://en.wikipedia.org/wiki/Three_utilities_problem); this is a **nonplanar graph** with at least one crossing
+- Examples of planar graphs: trees, grid graphs, convex polyhedra
+- Properties of Planar Graphs
+    - **Euler's formula**: A connected planar graph with $V$ vertices, $E$ edges, and $F$ faces satisfies the equation $V-E+F=2$
+        - Implies that there are few edges in a graph
+        - For simple planar graphs, ${E \leq 3V - 6}$; for bipartite ones, ${E\leq 2V - 4}$
+    - Simple planar graphs have $\leq 3n-6$ edges and their degeneracy is $\leq 5$
+        - This means that $m$ is $O(n)$
+    - **Four-color theorem**: Can be colored with $\leq 4$ colors
+    - **Planar separator theorem**: Tree width is $O(\sqrt{n})$
+    - **Product structure theorem**: Every planar graph is a subgraph of a product $P\boxtimes T$ where $P$ is a path and $T$ has treewidth $O(1)$
+- **Kuratowski's Theorem**: A graph is planar iff it does not have a subgraph formed by $K_{3,3}$ or $K_5$ by creating big edges using existing edges
+
+- Duality; create a vertex for each face and an edge between touching faces
+    - If a subgraph of the primal has a cycle, then the dual will be a disconnected graph
+    - If the primal is a spanning tree, then the dual will also be a spanning tree
+    - If the primal graph is Eulerian, then the dual graph will be bipartite
+    - Acyclic in primal $\iff$ dual is strongly connected
+    - Shortest path in primal $\iff$ min cut in dual
